push portfolio-ai-smart-assignment content & code

--- a/portfolio.html
+++ b/portfolio.html
@@ -311,13 +311,13 @@
                           <div class="image">
                             <!-- Mengubah image menjadi clickable dan mengarah ke portfolio details -->
                             <a href="portfolio-project-2.html">
-                              <img src="assets/img/ai-assignment/ai-assignment-cover.png" alt="course-creation-cover" class="img-fluid w-100">
+                              <img src="https://res.cloudinary.com/droe2sciy/image/upload/v1745281546/ai-assignment-cover_ldrzyd.png" alt="course-creation-cover" class="img-fluid w-100">
                             </a>
                             <!-- Menghapus gallery popup karena tidak diperlukan -->
                           </div>
                           <div class="text">
                             <div class="info">
-                              <a href="portfolio-project-2.html" class="title">Eduqat - AI Smart Assignments</a>
+                              <a href="portfolio-project-2.html" class="title">Eduqat - AI Smart Assignments ✨</a>
                               <p class="subtitle">Product Design | Dashboard</p>
                             </div>
                             <div class="visite-btn">
@@ -346,8 +346,8 @@
                           </div>
                           <div class="text">
                             <div class="info">
-                              <a href="portfolio-details-1.html" class="title">FlowArch - Architecture Service Website</a>
-                              <p class="subtitle">UI UX Design | Development</p>
+                              <a href="portfolio-details-1.html" class="title">Eduqat - Membership Package [Coming Soon]</a>
+                              <p class="subtitle">Product Design | Dashboard</p>
                             </div>
                             <div class="visite-btn">
                               <a href="portfolio-details-1.html">Visit Site
